--- a/puissance_4/puissance4.css
+++ b/puissance_4/puissance4.css
@@ -8,22 +8,22 @@ html body{
     background-color: rgba(99, 97, 97, 0.598);
 }
 #tab{
-    height: 500px;
-    width: 500px;
-    display: flex;
+    display: grid;
+    grid-template-rows: repeat(6 , 100px);
+    grid-template-columns: repeat(7 , 100px);
     margin-left: 50px;
+    border: solid;
+    background-color: rgb(0, 221, 255);
+    border-radius: 10px;
 }
-.col{
-    flex: 1;
-    
-}
+
 .case{
-    height: 30%;
-    flex: 1;
-    border-collapse: collapse;
-    border-radius: 5px;
+    background-color: gray;
+    border: solid 2px;
+    border-radius: 60px;
+    margin: 3px;
     cursor: pointer;
-    font-size: 120px;
+    font-size: 1px;
     display: flex;
     justify-content: center;
     align-items: center;
