--- a/puissance_4/puissance4.css
+++ b/puissance_4/puissance4.css
@@ -1,3 +1,6 @@
+html{
+    height: 100%;
+}
 html body{
     height: 100%;
     width: 100%;
@@ -8,26 +11,35 @@ html body{
     background-color: rgba(99, 97, 97, 0.598);
 }
 #tab{
-    display: grid;
-    grid-template-rows: repeat(6 , 100px);
-    grid-template-columns: repeat(7 , 100px);
+    display: flex;
+    height: 80%;
+    width: 40%;
     margin-left: 50px;
-    border: solid;
-    background-color: rgb(0, 221, 255);
+    border: solid 10px;
     border-radius: 10px;
 }
+.col{
+    background-color: black;
+    border: none ;
+    flex: 1;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.col:hover{
+    background-color: blue;
+    
 
+}
 .case{
     background-color: gray;
+    flex: 1;
     border: solid 2px;
-    border-radius: 60px;
+    border-radius: 80px;
     margin: 3px;
-    cursor: pointer;
     font-size: 1px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
 }
 .borderR{
     border-right: solid 4px rgb(100, 98, 98);
@@ -45,6 +57,8 @@ h1{
     justify-content: space-around;
     border-top: solid 1px gray;
     padding-top: 40px;
+    height: 80%;
+    width: 100%;
 
 }
 .info{
@@ -56,6 +70,7 @@ h1{
     flex-direction: column;
     justify-content: space-around;
     width: 30%;
+    height: 80%;
     border: ridge 1px gray;
     border-radius: 10px;
     background-color: rgba(128, 128, 128, 0.575);
@@ -103,4 +118,11 @@ h3{
 a{
     text-decoration: none;
     color: black;
+}
+#result{
+    width: fit-content;
+    font-size: 40px;
+    background-color: black;
+    text-align: center;
+    padding: 10px;
 }
