--- a/puissance_4/puissance4.css
+++ b/puissance_4/puissance4.css
@@ -15,10 +15,12 @@ html body{
     height: 80%;
     width: 40%;
     margin-left: 50px;
-    border: solid 10px;
+    
     border-radius: 10px;
 }
 .col{
+    border-radius: 10px;
+    padding: 6px;
     background-color: black;
     border: none ;
     flex: 1;
@@ -28,7 +30,7 @@ html body{
     justify-content: space-around;
 }
 .col:hover{
-    background-color: blue;
+    background-color: rgba(0, 0, 0, 0.69);
     
 
 }
